Fixed Compilation issues w/msg_frequency node

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.5)
 project(optitrack)
 
 
-# Default to C++14
+# Default to C++17
 if(NOT CMAKE_CXX_STANDARD)
   set(CMAKE_CXX_STANDARD 17)
 endif()
@@ -19,18 +19,16 @@ find_package(tf2_geometry_msgs REQUIRED)
 find_package(Threads REQUIRED)
 find_package(px4_msgs REQUIRED)
 
+set(VRPN_INSTALL_DIR "/usr/local/lib")
+
+# === VRPN Publisher Node ===
+
 # Source files
 set(VRPN_SOURCES
 	src/publish_mocap_odometry.cpp
 	src/VrpnClient.cpp
 )
 
-
-set(ESTIMATOR_RESET_SOURCES
-	src/reset_estimator.cpp
-)
-
-set(VRPN_INSTALL_DIR "/usr/local/lib")
 
 add_executable(publish_mocap_odometry_node ${VRPN_SOURCES})
 
@@ -51,6 +49,11 @@ target_link_libraries(publish_mocap_odometry_node
 	Threads::Threads
 )
 
+# === Reset Estimator Node ===
+
+set(ESTIMATOR_RESET_SOURCES
+	src/reset_estimator.cpp
+)
 
 add_executable(reset_estimator_node ${ESTIMATOR_RESET_SOURCES})
 
@@ -68,9 +71,35 @@ target_link_libraries(reset_estimator_node
 	Threads::Threads
 )
 
+# === Calculate Message Freq Node ===
+
+set(CALC_FREQ_SOURCES
+	src/calc_mocap_frequency.cpp
+)
+
+add_executable(calc_msg_frequency_node ${CALC_FREQ_SOURCES})
+
+ament_target_dependencies(calc_msg_frequency_node
+	rclcpp
+)
+
+target_include_directories(calc_msg_frequency_node PRIVATE
+	${CMAKE_SOURCE_DIR}/include/optitrack
+	${VRPN_INSTALL_DIR}
+)
+
+target_link_libraries(calc_msg_frequency_node
+	${VRPN_INSTALL_DIR}/libvrpn.a
+	${VRPN_INSTALL_DIR}/libquat.a
+	Threads::Threads
+)
+
+# === Installation ===
+
 install(TARGETS
 	publish_mocap_odometry_node	
 	reset_estimator_node
+	calc_msg_frequency_node
 	DESTINATION lib/${PROJECT_NAME}
 )
 
